--- a/library_SlidingMenu/build.gradle
+++ b/library_SlidingMenu/build.gradle
@@ -2,18 +2,18 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "26.0.1"
-
+    buildToolsVersion '25.0.0'
     defaultConfig {
-        minSdkVersion 5
-        targetSdkVersion 17
+        minSdkVersion 19
+        targetSdkVersion 19
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+    }
+    productFlavors {
     }
 }
 
