--- a/welcome/build.gradle
+++ b/welcome/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.topnews"
         minSdkVersion 19
@@ -15,6 +15,10 @@ android {
         }
     }
     productFlavors {
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
 
